# opencore-mcp

./: .gitignore  README.md  pyproject.toml
fixes/templates/: command_injection.js.template  command_injection.py.template  cors_wildcard.js.template  debug_true.py.template  eval_usage.js.template  hardcoded_secret.js.template  hardcoded_secret.py.template  missing_auth.js.template  missing_auth.py.template  pickle_loads.py.template  sql_injection.js.template  sql_injection.py.template  weak_crypto.js.template  weak_hashing.py.template  xss_innerHTML.js.template
rules/: config.yaml  javascript.json  known_vulnerabilities.json  python.json  typescript.json
src/opencore_mcp/: __init__.py  language_detector.py  models.py  rules_engine.py  server.py
src/opencore_mcp/prompts/: __init__.py  prompt_templates.py
src/opencore_mcp/resources/: __init__.py  resource_handlers.py
src/opencore_mcp/tools/: __init__.py  analyzer.py  dependencies.py  fixer.py  scanner.py
tests/: __init__.py  conftest.py  test_rules_engine.py  test_tools.py
tests/fixtures/: requirements.txt  sample_code.py
